# weibo-sentiment-system

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
backend/: README.md  db.py  main.py  models.py  package-lock.json  pyproject.toml  tasks.py
backend/classifier/: model.py  utils.py
backend/classifier/models/: 01_lstm_model.model  word2vec.model
backend/routers/: crawler.py  datasatas.py  get_datasatas.py  get_tweet_by_keyword.py  text_classification.py  tweet_trend.py  tweets.py
backend/scrapy_project/: settings.py
backend/scrapy_project/spiders/: common.py  tweet_by_keyword.py  tweet_spider_by_tweet_id.py
crawler/: README.md  pyproject.toml
crawler/classifier/: helper.py  model.py
crawler/classifier/models/: 01_lstm_model.pth
crawler/crawler/: middlewares.py  pipelines.py  run.py  settings.py
crawler/crawler/spiders/: comment.py  common.py  tweet_by_keyword.py  tweet_spider_by_user_id.py  user.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/layout/: DefaultLayout.vue
frontend/src/: App.vue  main.js
frontend/src/api/: axiosInstance.js  prediction.js  startCrawler.js
frontend/src/components/: SearchBar.vue
frontend/src/components/Auths/: DefaultAuthCard.vue  InputGroup.vue
frontend/src/components/Charts/: BarChart.vue  ChartOne.vue  ChartThree.vue  ChartTwo.vue  LineChart.vue  MapChart.vue  PieChart.vue  theme.json
frontend/src/layout/: DefaultLayout.vue
frontend/src/router/: index.js
frontend/src/stores/: darkMode.js  useSearchStore.js
frontend/src/views/: Dashboard.vue  Index.vue  KeywordAnalysis.vue  Prediction.vue  SignIn.vue  TextClassification.vue  WebSockerDemo.vue
notebooks/: pyproject.toml
notebooks/code/: LSTM.ipynb  helper.py  machine-learning-models.ipynb  preprocessing.ipynb  utils.py
notebooks/data/: stopwords.txt
notebooks/data/weibo_senti_100k/: test.csv
src/: main.js
src/api/: axiosInstance.js  prediction.js  startCrawler.js
src/components/: SearchBar.vue
src/components/Auths/: DefaultAuthCard.vue  InputGroup.vue
src/components/Charts/: BarChart.vue  ChartThree.vue  ChartTwo.vue  MapChart.vue  PieChart.vue
src/components/Dashboard/: DataStats.vue  TweetTrend.vue
src/components/Footer/: Footer.vue
src/components/Header/: DarkModeSwitcher.vue  HeaderArea.vue
src/layout/: DefaultLayout.vue
src/router/: index.js
src/stores/: darkMode.js  useSearchStore.js
src/views/: Dashboard.vue  Index.vue  SignIn.vue  TextClassification.vue
(+18 files in other folders)
