[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Peng Rao <76681491+Raopend@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
scrapy-fake-useragent = "^1.4.4"
jieba = "^0.42.1"
torch = "^2.2.1"
gensim = "^4.3.2"
requests = "^2.31.0"
motor = "^3.4.0"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
