[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["Peng Rao <76681491+Raopend@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.1"
pymongo = "^4.6.3"
scrapy-fake-useragent = "^1.4.4"
scrapyd = "^1.4.3"
scrapyd-client = "^1.2.3"
torch = "^2.2.2"
gensim = "^4.3.2"
jieba = "^0.42.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
