[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Peng Rao <76681491+Raopend@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
pandas = "^2.2.1"
plotly = "^5.20.0"
scikit-learn = "^1.4.1.post1"
torch = "^2.2.2"
gensim = "^4.3.2"
jieba = "^0.42.1"
tqdm = "^4.66.2"
xgboost = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
